--- a/.github/workflows/HC5962.yml
+++ b/.github/workflows/HC5962.yml
@@ -12,7 +12,7 @@ name: Build HC5962
 
 on:
   schedule:
-    - cron: '31 00 2 * *'
+    - cron: '0 0 1 * *'
   repository_dispatch:
   workflow_dispatch:
     inputs:
@@ -47,6 +47,13 @@ jobs:
       env:
         DEBIAN_FRONTEND: noninteractive
       run: |
+        # Free up disk space on GitHub runner
+        sudo docker image prune -a -f || true
+        sudo swapoff -a || true
+        sudo rm -f /swapfile || true
+        sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /opt/hostedtoolcache/CodeQL || true
+        df -h
+
         sudo apt update -y
         sudo apt full-upgrade -y
         sudo apt install -y ack antlr3 asciidoc autoconf automake autopoint binutils bison build-essential \
@@ -56,6 +63,9 @@ jobs:
         libreadline-dev libssl-dev libtool llvm lrzsz msmtp ninja-build p7zip p7zip-full patch pkgconf \
         python3 python3-pyelftools python3-setuptools qemu-utils rsync scons squashfs-tools subversion \
         swig texinfo uglifyjs upx-ucl unzip vim wget xmlto xxd zlib1g-dev
+        sudo apt-get autoremove -y --purge || true
+        sudo apt-get clean || true
+        sudo rm -rf /var/lib/apt/lists/* || true
         sudo timedatectl set-timezone "$TZ"
         sudo mkdir -p /workdir
         sudo chown $USER:$GROUPS /workdir
@@ -64,7 +74,7 @@ jobs:
       working-directory: /workdir
       run: |
         df -hT $PWD
-        git clone $REPO_URL -b $REPO_BRANCH openwrt
+        git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
         ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
 
     - name: Load custom feeds
