--- a/.github/workflows/m28c.yml
+++ b/.github/workflows/m28c.yml
@@ -13,7 +13,7 @@ name: Build m28c
 
 on:
   schedule:
-    - cron: '01 00 2 * *'
+    - cron: '0 0 * * 1'
   repository_dispatch:
   workflow_dispatch:
     inputs:
@@ -29,6 +29,7 @@ env:
   CONFIG_FILE: n28c.config
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: m28c.sh
+  MAKE_THREADS: 3
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: true
   UPLOAD_COWTRANSFER: false
@@ -48,6 +49,13 @@ jobs:
       env:
         DEBIAN_FRONTEND: noninteractive
       run: |
+        # Free up disk space on GitHub runner
+        sudo docker image prune -a -f || true
+        sudo swapoff -a || true
+        sudo rm -f /swapfile || true
+        sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /opt/hostedtoolcache/CodeQL || true
+        df -h
+
         sudo apt update -y
         sudo apt full-upgrade -y
         sudo apt install -y ack antlr3 asciidoc autoconf automake autopoint binutils bison build-essential \
@@ -57,6 +65,9 @@ jobs:
         libreadline-dev libssl-dev libtool llvm lrzsz msmtp ninja-build p7zip p7zip-full patch pkgconf \
         python3 python3-pyelftools python3-setuptools qemu-utils rsync scons squashfs-tools subversion \
         swig texinfo uglifyjs upx-ucl unzip vim wget xmlto xxd zlib1g-dev
+        sudo apt-get autoremove -y --purge || true
+        sudo apt-get clean || true
+        sudo rm -rf /var/lib/apt/lists/* || true
         sudo timedatectl set-timezone "$TZ"
         sudo mkdir -p /workdir
         sudo chown $USER:$GROUPS /workdir
@@ -65,7 +76,7 @@ jobs:
       working-directory: /workdir
       run: |
         df -hT $PWD
-        git clone $REPO_URL -b $REPO_BRANCH openwrt
+        git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
         ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
 
     - name: Load custom feeds
@@ -109,8 +120,8 @@ jobs:
       id: compile
       run: |
         cd openwrt
-        echo -e "$(nproc) thread compile"
-        make -j$(nproc) || make -j1 || make -j1 V=s
+        echo -e "${MAKE_THREADS} thread compile"
+        make -j${MAKE_THREADS} || make -j1 || make -j1 V=s
         echo "::set-output name=status::success"
         grep '^CONFIG_TARGET.*DEVICE.*=y' .config | sed -r 's/.*DEVICE_(.*)=y/\1/' > DEVICE_NAME
         [ -s DEVICE_NAME ] && echo "DEVICE_NAME=_$(cat DEVICE_NAME)" >> $GITHUB_ENV
